<resources>
    <string name="app_name">HealthConnect</string>
    <string name="app_logo">HealthConnect logo</string>

    <string name="splash_bg">SplashScreen Background</string>
    <string name="app_description">Medical app</string>

    <!-- Onboarding -->
    <string name="onboarding_btnSkip">Skip</string>
    <string name="onboarding_btnNext">Next</string>

    <!-- Onboarding 1 -->
    <string name="onboarding1_img">Female Doctor</string>
    <string name="onboarding1_info">Check your Health and Medical records</string>

    <!-- Onboarding 2 -->
    <string name="onboarding2_img">Male Doctor</string>
    <string name="onboarding2_info">Access your appointments</string>

    <!-- Onboarding 3 -->
    <string name="onboarding3_info1">Let\'s get started!</string>
    <string name="onboarding3_info2">Login to Connect with your Health Partner</string>
    <string name="onboarding3_login">Login</string>
    <string name="onboarding3_signup">Sign Up</string>

    <!-- Login -->
    <string name="txt_emailHint">Enter your email</string>
    <string name="txt_passHint">Enter your password</string>

    <!-- Sign Up -->
    <string name="txt_usernameHint">Enter your username</string>
    <string name="txt_confirmPassHint">Confirm password</string>
    <string name="txt_userFirstNameHint">Enter your first name</string>
    <string name="txt_userLastNameHint">Enter your last name</string>
    <string name="txt_userDateOfBirthHint">Enter your Birthdate</string>

    <!-- Home Doctor -->
    <string name="txtHiUser">Hi, User!</string>
    <string name="txtWelcome">Welcome Back</string>
    <string name="txtBtnPatient">Patients</string>
    <string name="txtBtnAppointment">Appointments</string>
    <string name="txtSearchHint">Search Patient here..</string>

    <!-- Add new patient -->
    <string name="txtPatient_usernameHint">Enter username</string>
    <string name="txtPatient_emailHint">Enter email</string>
    <string name="txtPatient_passHint">Enter password</string>
    <string name="txtPatient_userFirstNameHint">Enter first name</string>
    <string name="txtPatient_userLastNameHint">Enter last name</string>
    <string name="txtPatient_userDateOfBirthHint">Enter birthdate</string>
    <string name="btnAddPatient">Submit</string>

    <!-- Profile -->
    <string name="txtDescription">Notes:</string>
    <string name="txtDescriptionValue">Doctors notes</string>

    <!-- Appointment -->
    <string-array name="appointment_status_array">
        <item>Pending</item>
        <item>Completed</item>
        <item>Cancelled</item>
        <item>No Show</item>
    </string-array>
</resources>