<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="147dp"
        android:layout_height="147dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="#384483"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/txt_primary"
        android:contentDescription="@string/txt_emailHint"
        android:drawableLeft="@drawable/vector_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/txt_usernameHint"
        android:importantForAccessibility="yes"
        android:inputType="textEmailAddress"
        android:paddingStart="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/txt_primary"
        android:contentDescription="@string/txt_passHint"
        android:drawableLeft="@drawable/vector_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/txt_passHint"
        android:importantForAccessibility="yes"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/onboarding3_login"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/primary_button"
        android:text="@string/onboarding3_login"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass" />

</androidx.constraintlayout.widget.ConstraintLayout>