<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/txt_primary"
        android:drawableLeft="@drawable/vector_home_24"
        android:drawablePadding="10dp"
        android:hint="@string/txt_usernameHint"
        android:importantForAccessibility="yes"
        android:inputType="text"
        android:paddingStart="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_primary"
        android:drawableLeft="@drawable/vector_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/txt_emailHint"
        android:importantForAccessibility="yes"
        android:inputType="textEmailAddress"
        android:paddingStart="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <EditText
        android:id="@+id/txtUserPass"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_primary"
        android:drawableLeft="@drawable/vector_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/txt_passHint"
        android:importantForAccessibility="yes"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtUserConfirmPass"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_primary"
        android:drawableLeft="@drawable/vector_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/txt_confirmPassHint"
        android:importantForAccessibility="yes"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserPass" />

    <EditText
        android:id="@+id/txtUserFirstName"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_primary"
        android:drawableLeft="@drawable/vector_account_circle_24"
        android:drawablePadding="10dp"
        android:hint="@string/txt_userFirstNameHint"
        android:importantForAccessibility="yes"
        android:inputType="text"
        android:paddingStart="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserConfirmPass" />


    <EditText
        android:id="@+id/txtUserLastName"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/txt_primary"
        android:drawableLeft="@drawable/vector_account_circle_24"
        android:drawablePadding="10dp"
        android:hint="@string/txt_userLastNameHint"
        android:importantForAccessibility="yes"
        android:inputType="text"
        android:paddingStart="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserFirstName" />

    <EditText
        android:id="@+id/txtDateOfBirth"
        android:layout_width="324dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/txt_primary"
        android:drawableLeft="@drawable/vector_calendar_today_24"
        android:drawablePadding="10dp"
        android:hint="@string/txt_userDateOfBirthHint"
        android:importantForAccessibility="yes"
        android:inputType="none"
        android:paddingStart="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserLastName"
        android:focusable="false"
        android:clickable="true"/>

    <Button
        android:id="@+id/onboarding3_signup"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/primary_button"
        android:text="@string/onboarding3_signup"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDateOfBirth" />


</androidx.constraintlayout.widget.ConstraintLayout>